[metadata]
name = pytest-multilog
version = 0.0
description = Multi-process logs handling and other helpers for pytest
long_description = file: README.md
license = Mozilla Public License Version 2.0
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir = =src
packages = find:

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests/
junit_family = xunit2
filterwarnings =
    ignore::DeprecationWarning
addopts = 
    --capture=sys
    --numprocesses=auto
    --junit-xml=out/tests/report.xml
    --cov=ptmultilog
    --cov-report=html:out/coverage-report
    --cov-report=xml:out/coverage.xml
    --cov-report=term
    --cov-config=setup.cfg

; coverage configuration
[run]
data_file = out/.coverage
concurrency = multiprocessing
disable_warnings = no-data-collected
branch = True

[flake8]
max-line-length = 160
enable-extensions = G
# Best way to select all installed plugins so far ...
select = E,F,W,A,B,C,D,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,X,Y,Z
ignore = E501,E203,W503
format = html
htmldir = out/flake-report
show-source = true
jobs = auto
exclude =
    __pycache__

[isort]
line_length = 160
multi_line_output = 3
